# marks-movie-graph

./: DATAMODEL.md  GUARDRAILS.md  PLAN.md  PROGRESS.md  README.md  TASKS.md  crew_runner.py  crew_runner2.py  docker-compose.agent.yml  requirements.txt  snake.py
agent/: Dockerfile  entrypoint.sh
blast_one/: README.md  blast_one_report_1.md  blast_one_report_2.md  pyproject.toml
blast_one/db/: chroma.sqlite3
blast_one/knowledge/: blast_one_research.txt
blast_one/src/blast_one/: crew.py  main.py
blast_one/src/blast_one/config/: agents.yaml  tasks.yaml
pacman_builder/: README.md  pyproject.toml
pacman_builder/src/pacman_builder/: crew.py  main.py
pacman_builder/src/pacman_builder/config/: agents.yaml
scripts/: test.sh
