[project]
name = "blast_one"
version = "0.1.0"
description = "blast-one using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
]

[project.scripts]
blast_one = "blast_one.main:run"
run_crew = "blast_one.main:run"
train = "blast_one.main:train"
replay = "blast_one.main:replay"
test = "blast_one.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
