[project]
name = "pacman_builder"
version = "0.1.0"
description = "pacman-builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
pacman_builder = "pacman_builder.main:run"
run_crew = "pacman_builder.main:run"
train = "pacman_builder.main:train"
replay = "pacman_builder.main:replay"
test = "pacman_builder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
